nav menu overlaping flashcards modal bug fixed

--- a/src/Frontend/src/components/course/Navigation/Navigation.less
+++ b/src/Frontend/src/components/course/Navigation/Navigation.less
@@ -71,6 +71,7 @@
     position: relative;
     left: 0;
     transition: none;
+    z-index: 1;
   }
 
   .contentWrapper {
